Implement nodePort field

--- a/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
+++ b/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
@@ -36,6 +36,9 @@ spec:
           spec:
             description: SimpleGoAppDeploymentSpec defines the desired state of SimpleGoAppDeployment
             properties:
+              nodePort:
+                format: int32
+                type: integer
               replicas:
                 type: integer
               returnValue:
