Implement the opportunity to use the pod name as return value

--- a/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
+++ b/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
@@ -39,6 +39,8 @@ spec:
               nodePort:
                 format: int32
                 type: integer
+              podNameAsValue:
+                type: boolean
               replicas:
                 type: integer
               returnValue:
