--- a/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
+++ b/config/crd/bases/simple-go-app-k8s-operator.jonasbe.de_simplegoappdeployments.yaml
@@ -53,6 +53,13 @@ spec:
           status:
             description: SimpleGoAppDeploymentStatus defines the observed state of
               SimpleGoAppDeployment
+            properties:
+              nodePort:
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                  of cluster Important: Run "make" to regenerate code after modifying
+                  this file'
+                format: int32
+                type: integer
             type: object
         type: object
     served: true
